--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/pictures/fola.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="My Website"/>
-    <title>Fola Aluko's Website</title>
+    <title>Get to know me</title>
   </head>
   <body>
     <div id="root"></div>
